# bingrep

./: CLAUDE.md  ChangeLog.md  LICENSE  README.md  bingrep.sln
.claude/: settings.local.json
GhostYak/: GhostYak.csproj  Program.cs  Version.cs
GhostYak/IO/: Kernel32.cs  PhysicalDiskInfo.cs
GhostYak/IO/CommandLine/: Options.cs
GhostYak/IO/RawDiskDrive/: BaseStream.cs  DDImageStorage.cs  DiskImageStream.cs  EWFStorage.cs  FileStreamEx.cs  LogicalStorage.cs  NativeMethods.cs  PhysicalStorage.cs  PhysicalStream.cs  StorageBase.cs  StreamEx.cs  Win32Native.cs
GhostYak/Properties/: AssemblyInfo.cs
GhostYak/Text/: HexConverter.cs
bingrep/: Program.cs  Program_최적화.cs  Version.cs  bingrep.csproj
bingrep-rust/: .gitignore  Cargo.toml  Makefile  README.md  justfile  run_tests.sh  todo.md
bingrep-rust/benches/: regex_engine_comparison.rs
bingrep-rust/examples/: complexity_test.rs  quick_benchmark.rs
bingrep-rust/src/: benchmark_utils.rs  buffer_manager.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  pcre2_processor.rs  regex_processor.rs  stream.rs
bingrep-rust/tests/: benchmark_test.rs  concurrency_test.rs  debug_quantifier.rs  edge_case_test.rs  integration_test.rs  multifile_test.rs  parallel_test.rs  regex_quantifiers_test.rs  regex_syntax_test.rs  structured_output_test.rs  test_data_generator.rs
bingrep/Properties/: AssemblyInfo.cs
documents/: .gitignore  ChangeLog.hwp  Makefile  README.adoc  USER_MANUAL.adoc  ch01-manual.adoc  install-font.bat
documents/book/: changelog.adoc  introduction.adoc
documents/images/: cover.pptx
(+93 files in other folders)
