[package]
name = "bingrep-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
pcre2 = "0.2"
hex = "0.4"
rayon = "1.10"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
libc = "0.2"

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "regex_engine_comparison"
harness = false

[package.metadata.scripts]
bench = "cargo run --example quick_benchmark --release && cargo run --example complexity_test --release"
bench-quick = "cargo run --example quick_benchmark --release"
bench-complexity = "cargo run --example complexity_test --release"
bench-full = "cargo bench"
dev-test = "cargo test && cargo clippy"
pre-commit = "cargo fmt && cargo clippy && cargo test"
